// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Calliper's identifyGroup destination action: all fields 1`] = `
Object {
  "companyId": "NPiGT5(cBHy6WF3",
  "group": Object {
    "group_id": "NPiGT5(cBHy6WF3",
    "time": 1612137600000,
    "traits": Object {
      "testType": "NPiGT5(cBHy6WF3",
    },
  },
  "key": "NPiGT5(cBHy6WF3",
}
`;

exports[`Testing snapshot for Calliper's identifyGroup destination action: required fields 1`] = `
Object {
  "companyId": "NPiGT5(cBHy6WF3",
  "group": Object {
    "group_id": "NPiGT5(cBHy6WF3",
    "time": 1612137600000,
  },
  "key": "NPiGT5(cBHy6WF3",
}
`;
